# data-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
analysis/250116-covid-impact-airport-port-traffic/: README.html  README.md  airport_recovery_levels.csv  airport_traffic_analysis.sql  airport_worst_impact.csv  analysis.py  port_average_metrics.csv  port_traffic_analysis.sql  port_worst_periods.csv
analysis/251116-covid-commercial-traffic-us/: README.md  analysis.py  best_recovery_industries.csv  commercial_traffic_by_industry.sql  industry_statistics.csv  overall_summary.csv  worst_impacted_industries.csv
analysis/251116-wikipedia-contribution-patterns/: README.html  README.md  analysis.py  contribution_overview.sql  contributor_type_summary.csv  day_of_week_summary.csv  hour_of_day_summary.csv  minmax_timestamps.sql  monthly_trend_summary.csv  namespace_distribution_summary.csv  overview_summary.csv  temporal_analysis.py  temporal_patterns.sql  top_human_contributors_summary.csv  yearly_trend_summary.csv
src/querylog/: add_usage_data.py  config.py  create_table_structure.py  html_to_pdf.py  init_sample_data.py  md_to_html.py  md_to_pdf.py  run_query.py
tables/: HIGH_USAGE_TABLES.md
tables/Your-Project-ID-Here/covid19_geotab_mobility_impact/airport_traffic/: ddl.sql  usage.sql
tables/Your-Project-ID-Here/covid19_geotab_mobility_impact/city_congestion/: ddl.sql
tables/Your-Project-ID-Here/covid19_geotab_mobility_impact/commercial_traffic/: ddl.sql
tables/Your-Project-ID-Here/covid19_geotab_mobility_impact/commercial_traffic_by_industry/: ddl.sql  usage.sql
tables/Your-Project-ID-Here/covid19_geotab_mobility_impact/fuel_station_daily_fillups/: ddl.sql
tables/Your-Project-ID-Here/covid19_geotab_mobility_impact/fuel_station_weekly_fillups/: ddl.sql
(+14 files in other folders)
